--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,11 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  Provinces of Ireland
+   <ol>
+   <li (click)="openUlster()"> Ulster</li>
+<li (click)="openMunster()"> Munster</li>
+<li (click)="openConnaught()"> Connaught</li>
+<li (click)="openLeinster()"> Leinster</li>
+</ol>  
 </ion-content>
